<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">CrosswordScan</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_puzzle">Scan Puzzles</string>
    <string name="complete_puzzle">Complete Puzzles</string>

    <!-- Scan Activity -->
    <string name="title_activity_scan">Puzzle Scanner</string>
    <string name="placeholder">Camera Placeholder</string>
    <string name="photo">Take Photo</string>

    <!-- Confirm Grid Activity -->
    <string name="title_activity_confirm_grid">Confirm Grid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Name Puzzle Activity -->
    <string name="title_activity_name_puzzle">Name Your Puzzle</string>
    <string name="enter">Enter</string>
    <string name="puzzle_scanned">Puzzle Scanned!</string>
    <string name="crossword_grid">Crossword Grid</string>
    <string name="grid_correct">Press back if this grid is incorrect</string>

    <!-- Scanned Puzzles Activity -->
    <string name="title_activity_puzzle_list">Puzzle List</string>

    <!-- Puzzle List Activity -->
    <string name="play_puzzle">Play Puzzle</string>
    <string name="puzzle_info">Puzzle Info</string>
    <string name="delete_puzzle">Delete Puzzle</string>
    <string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
    <string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%s puzzles</string>
    <string name="n_playing">%s playing</string>

    <!-- Complete Puzzle Activity -->
    <string name="title_activity_complete_puzzle">first puzzle</string>
    <string name="mock_clue">1a. Baseball units (4)</string>
    <string name="undo">Undo</string>
    <string name="restart">Restart Puzzle</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="settings">Settings</string>
    <string name="previous_clue">Previous Clue</string>
    <string name="next_clue">Next Clue</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_list_view_loader">ListViewLoader</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_puzzle_info">PuzzleInfoActivity</string>

</resources>