<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfirmGridActivity" >

    <TextView
        android:id="@+id/puzzle_scanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/puzzle_scanned"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/crossword_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/puzzle_scanned"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/crossword_grid"
        android:src="@drawable/crossword_grid" />

    <TextView
        android:id="@+id/grid_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crossword_grid"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/grid_correct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/grid_correct"
        android:layout_marginTop="14dp" >

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/check"
            android:onClick="confirmGrid"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/rejectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/x_icon"
            android:onClick="rejectGrid"
            android:text="@string/no"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</RelativeLayout>