<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SolvePuzzleActivity" >

    <edu.dcc.crosswordscan.CrosswordGridView
        android:id="@+id/crossword_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/crossword_grid" />

    <RelativeLayout
        android:id="@+id/clue_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keyboard_view"
        android:layout_below="@+id/crossword_grid" >

        <ImageButton
            android:id="@+id/previous_clue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:contentDescription="@string/previous_clue"
            android:onClick="previousClue"
            android:src="@drawable/left" />

        <LinearLayout
            android:id="@+id/clue_texts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_toLeftOf="@+id/next_clue"
            android:layout_toRightOf="@+id/previous_clue"
            android:gravity="center"
            android:onClick="switchAcrossMode"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/across_clue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/down_clue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/next_clue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/next_clue"
            android:onClick="nextClue"
            android:src="@drawable/right" />
    </RelativeLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible" />

</RelativeLayout>